<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2E5DE"
    tools:context=".Manual">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="30dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/updateMan"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/motor1_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/motor_1"
                android:textSize="18sp"
                android:thumb="@drawable/switch_costume2"
                app:showText="true"
                app:track="@drawable/track" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/motor2_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/motor_2"
                android:textSize="18sp"
                android:thumb="@drawable/switch_costume2"
                app:showText="true"
                app:track="@drawable/track" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/motor3_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/motor_3"
                android:textSize="18sp"
                android:thumb="@drawable/switch_costume2"
                app:showText="true"
                app:track="@drawable/track" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/motor4_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/motor_4"
                android:textSize="18sp"
                android:thumb="@drawable/switch_costume2"
                app:showText="true"
                app:track="@drawable/track" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/updateMan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:background="@drawable/btn_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>