<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/motor1_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/motor_1"
            android:textSize="18sp"
            android:thumb="@drawable/switch_costume2"
            app:showText="true"
            app:track="@drawable/track" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/motor2_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/motor_2"
            android:textSize="18sp"
            android:thumb="@drawable/switch_costume2"
            app:showText="true"
            app:track="@drawable/track" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/motor3_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/motor_3"
            android:textSize="18sp"
            android:thumb="@drawable/switch_costume2"
            app:showText="true"
            app:track="@drawable/track" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/motor4_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/motor_4"
            android:textSize="18sp"
            android:thumb="@drawable/switch_costume2"
            app:showText="true"
            app:track="@drawable/track" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TimePicker
                    android:id="@+id/time_picker_start"
                    android:layout_width="170dp"
                    android:layout_height="150dp"
                    android:alpha="0.8"
                    android:background="@drawable/time_picker_back"
                    android:numbersTextColor="#E9ECF4"
                    android:timePickerMode="spinner" />

                <TextView
                    android:id="@+id/start_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/start_time"
                    android:textColor="#3199ec"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:gravity="center"
                android:orientation="vertical">

                <TimePicker
                    android:id="@+id/time_picker_stop"
                    android:layout_width="170dp"
                    android:layout_height="150dp"
                    android:alpha="0.8"
                    android:background="@drawable/time_picker_back"
                    android:numbersTextColor="#E9ECF4"
                    android:timePickerMode="spinner" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/stop_time"
                    android:textColor="#3199ec"
                    android:textSize="20sp" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>