<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    app:layout_constraintStart_toStartOf="parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

    <!-- Table Heading -->
    <TableRow
        android:background="@color/blue2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:textSize="12sp"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/motor_1"
            android:textColor="@android:color/white"
            android:padding="10sp"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/motor_2"
            android:textColor="@android:color/white"
            android:padding="10sp"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motor_3"
            android:textColor="@android:color/white"
            android:padding="10sp"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motor_4"
            android:textColor="@android:color/white"
            android:padding="10sp"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            />

    </TableRow>

    <!-- Saturday -->
    <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:textSize="12sp"
                android:text="@string/saturday"
                android:gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/d1m1"
                android:text="--\n--"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d1m2"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d1m3"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d1m4"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
        </TableRow>

        <!-- Sunday -->
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:textSize="12sp"
                android:text="@string/sunday"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d2m1"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d2m2"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d2m3"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d2m4"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
        </TableRow>

        <!-- Monday -->
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:textSize="12sp"
                android:text="@string/monday"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d3m1"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d3m2"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d3m3"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d3m4"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
        </TableRow>

        <!-- Tuesday -->
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:textSize="12sp"
                android:text="@string/tuesday"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d4m1"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d4m2"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d4m3"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d4m4"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
        </TableRow>

        <!-- Wednesday -->
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:textSize="12sp"
                android:text="@string/wednesday"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d5m1"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d5m2"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d5m3"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d5m4"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
        </TableRow>

        <!-- Thursday -->
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:textSize="12sp"
                android:text="@string/thursday"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d6m1"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d6m2"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d6m3"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d6m4"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
        </TableRow>

        <!-- Friday -->
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:textSize="12sp"
                android:text="@string/friday"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d7m1"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d7m2"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d7m3"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/d7m4"
                android:text="--\n--"
                android:padding="10sp"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                />
        </TableRow>

        <Button
            android:id="@+id/TableButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:alpha="0.8"
            android:background="@drawable/mybutton2"
            android:fontFamily="@font/montserrat"
            android:text="@string/ok"
            android:textColor="@color/white" />
    </TableLayout>
    <!--
    <Button
        android:id="@+id/popupButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:alpha="0.8"
        android:background="@drawable/mybutton2"
        android:fontFamily="@font/montserrat"
        android:text="OK"
        android:textColor="@color/white" />

    -->

</LinearLayout>

